--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="C:\Users\jmangold\OneDrive - Advisys\Logo Images\Logo.png" alt="Advisys Logo" class="logo">
+        <img src="Logo.png" alt="Advisys Logo" class="logo">
         <h1>Will my current savings grow enough for retirement?</h1>
     </div>
 
